[package]
name = "bidx"
version = "0.1.0"
authors = ["Sun Zhenyuan <sunzhenyuan@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bidx"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "bidxbin"
path = "src/main.rs"

[[bin]]
name = "cbind"
path = "cbind.rs"

[dependencies]
twox-hash = "1.2.0"
serde = "1.0.91"
serde_derive = "1.0.91"
bincode = "1.1.4"
chrono = "0.4.6"
bytevec = "0.2.0"
#bindgen = "0.49.1"
