[package]
name = "bioe"
version = "0.1.0"
authors = ["Sun Zhenyuan <sunzhenyuan@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bioe"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "biobench"
path = "src/main.rs"

[[bin]]
name = "cbind"
path = "cbind.rs"

[dependencies]
bincode = "1.1.4"
rayon = "1.1.0"
#bindgen = "0.49.1"
